--- a/src/dictionary.properties
+++ b/src/dictionary.properties
@@ -64,6 +64,12 @@ paymentStandard=\u8d44\u8d39\u6807\u51c6
 repay=\u7eed\u8d39
 repayPayment=\u7eed\u8d39\u652f\u4ed8
 confirmPayment=\u786e\u8ba4\u652f\u4ed8
+normal=\u6b63\u5e38
+unactivated=\u672a\u6fc0\u6d3b
+unpaid=\u5df2\u6b20\u8d39
+unknown=\u672a\u77e5
+personal=\u4e2a\u4eba
+family=\u5bb6\u5ead
 memberInfo=\u4f1a\u5458\u4fe1\u606f
 closedEvents=\u5386\u53f2\u6d3b\u52a8
 paymentInfo=\u7f34\u8d39\u4fe1\u606f
@@ -75,7 +81,6 @@ closeMembership=\u4f1a\u5458\u6ce8\u9500
 paymentNumber=\u7f16\u53f7
 paymentTime=\u4ed8\u8d39\u65f6\u95f4
 paymentAmount=\u4ed8\u8d39\u91d1\u989d
-personal=\u4e2a\u4eba
 oldPassword=\u539f\u5bc6\u7801
 newPassword=\u65b0\u5bc6\u7801
 newPasswordConfirm=\u65b0\u5bc6\u7801\u786e\u8ba4
